tests/integration/pilot/test_artifacts/pilot-058a94968f114a619ba739812/TestTraffic/consistent-hash/query_paramb/_test_context/Service-DestinationRule.1155041280.yaml
apiVersion: v1
kind: Service
metadata:
  name: consistent-hash
  namespace: echo-2-98059
spec:
  ports:
  - name: http
    port: 80
    targetPort: 18080
  - name: tcp
    port: 9090
    targetPort: 19090
  selector:
    test.istio.io/class: standard
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: consistent-hash
  namespace: echo-2-98059
spec:
  host: consistent-hash
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpQueryParameterName: some-query-param
